test/__snapshots__/readme.generated.test.ts.snap
// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`README.md code blocks Usage #1 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "2",
    "InsertStmt",
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks Usage #2 (ts) 1`] = `
{
  "stderr": [
    
"expected end of input after single statement

At 1:45:
   1│ SELECT id, name FROM users WHERE active = 1; SELECT 1
    │                                              ^^^^^^^^"
,
  ],
  "stdout": [
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks Usage #3 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "CmdList",
    "SelectStmt",
  ],
  "threw": undefined,
}
`;

exports[`README.md code blocks Errors #1 (ts) 1`] = `
{
  "stderr": [],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks Errors #2 (ts) 1`] = `
{
  "stderr": [
    
"near "FROM": syntax error

At 1:7:
   1│ SELECT FROM users
    │        ^^^^

  hint: expected a result expression before FROM"
,
  ],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks Errors #3 (ts) 1`] = `
{
  "stderr": [
    "1",
    "near "FROM": syntax error",
    
"near "FROM": syntax error

At 1:7:
   1│ SELECT FROM users
    │        ^^^^

  hint: expected a result expression before FROM"
,
  ],
  "stdout": [],
  "threw": undefined,
}
`;

exports[`README.md code blocks AST Traversal (ts) 1`] = `
{
  "stderr": [],
  "stdout": [
    "[ "t" ]",
  ],
  "threw": undefined,
}
`;
